[package]
name = "planet_generator"
version = "0.0.6-pre-alpha"
edition = "2021"
description = "[WIP] Generates data for galaxies, sectors, solar systems, planets and their inhabitants (Check README for features list)."
license = "MIT"

[dependencies]
seeded_dice_roller = "1.0.2"
log = "0.4.22"
simple_logger = "5.0.0"
serde = { version = "1.0.208", features = ["derive", "rc"] }
smart-default = "0.7.1"
ordered-float = "4.2.1"
lazy_static = "1.5.0"
strum = "0.26.3"
strum_macros = "0.26.4"
