[package]
name = "planet_generator"
version = "0.0.7-pre-alpha"
edition = "2021"
description = "[WIP] Generates data for galaxies, sectors, solar systems, planets and their inhabitants (Check README for features list)."
license = "MIT"

[dependencies]
seeded_dice_roller = "1.0.2"
log = "0.4.22"
simple_logger = "5.0.0"
serde = { version = "1.0.216", features = ["derive", "rc"] }
smart-default = "0.7.1"
ordered-float = "5.0.0"
lazy_static = "1.5.0"
strum = "0.27.1"
strum_macros = "0.27.1"
time = "0.3.39"
